--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/$1.html" }
+      { "source": "/:path", "destination": "/:path.html" }
     ],
     "redirects": [
       { "source": "/index.html", "destination": "/", "permanent": true }
