--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
     "rewrites": [
-      { "source": "/:path", "destination": "/:path.html" }
+      { "source": "/about", "destination": "/about.html" },
+      { "source": "/contact", "destination": "/contact.html" },
+      { "source": "/services", "destination": "/services.html" }
     ],
     "redirects": [
       { "source": "/index.html", "destination": "/", "permanent": true }
