--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
       { "source": "/(.*)", "destination": "/$1.html" }
     ],
     "redirects": [
-      { "source": "/index.html", "destination": "/", "permanent": true }
+      { "source": "/index", "destination": "/", "permanent": true }
     ]
   }
   
